@@ -1,7 +1,5 @@
 package org.geogebra.common.gui.toolcategorization.impl;
 
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
 
 import org.geogebra.common.gui.toolcategorization.ToolCollectionFilter;
@@ -15,7 +13,7 @@ public class ToolCollectionSetFilter implements ToolCollectionFilter {
 	private boolean include = false;
 
 	/**
-	 * Constructs a filter. This filters based on a set.
+	 * Constructs a filter based on a set of tool IDs to exclude.
 	 *
 	 * @param excludeSet tools that should be excluded
 	 */
@@ -28,7 +26,7 @@ public class ToolCollectionSetFilter implements ToolCollectionFilter {
 	 * @param excludeTools tools that should be excluded
 	 */
 	public ToolCollectionSetFilter(Integer... excludeTools) {
-		this(new HashSet<>(Arrays.asList(excludeTools)));
+		this(Set.of(excludeTools));
 	}
 
 	/**
@@ -42,7 +40,7 @@ public class ToolCollectionSetFilter implements ToolCollectionFilter {
 	}
 
 	@Override
-	public boolean filter(int tool) {
+	public boolean isIncluded(int tool) {
 		return set.contains(tool) == include;
 	}
 }
